<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".bookReadActivity.bookDetailActivity">

    <RelativeLayout
        android:id="@+id/detail_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="ExtraText">
        <!--标题-->
        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/return_commend"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:backgroundTint="#0000"
                android:contentDescription="@string/go_back"
                android:scaleType="fitCenter"
                android:src="@drawable/best_back" />

            <TextView
                android:id="@+id/blank"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="9" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.4"
                android:backgroundTint="#0000"
                android:contentDescription="shares"
                android:scaleType="fitCenter"
                android:src="@drawable/newshare" />
        </LinearLayout>

        <!--中间部分-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/bottomCard"
            android:layout_below="@id/head"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

                <LinearLayout
                    android:id="@+id/fixed_part"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@color/white"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/picture"
                        android:layout_width="0dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="2"
                        android:contentDescription="@string/picture_of_book"
                        android:gravity="center"
                        android:src="@drawable/default_cover2"
                        tools:ignore="NestedWeights" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/book_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/fangsong"
                            android:textStyle="bold"
                            android:text="@string/book_name"
                            android:textColor="@color/black"
                            android:textSize="22sp" />

                        <TextView
                            android:id="@+id/author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/jianti"
                            android:text="@string/author"
                            android:textColor="#D31A97EA"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">

                            <TextView
                                android:id="@+id/words"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/jianti"
                                android:text="@string/words"
                                android:textSize="18sp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_marginLeft="3dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/jianti"
                                android:text="字"
                                android:textStyle="bold"
                                android:textSize="13sp" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            <include
                layout="@layout/middle_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <!--底部-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bottomCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardCornerRadius="5dp"
            android:background="@color/container_high">
        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:backgroundTint="#0000"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="#0000">

                <LinearLayout
                    android:id="@+id/addlinear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/add_bookmark"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#0000"
                        android:scaleType="fitEnd"
                        android:contentDescription="加入书架"
                        android:src="@drawable/addinshelf" />

                    <TextView
                        android:id="@+id/add_bookmark_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="加入书架"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/readlinear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/addlinear"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/read"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#0000"
                        android:scaleType="fitEnd"
                        android:contentDescription="开始阅读"
                        android:src="@drawable/startread" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="开始阅读"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/likelinear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/like_this_book"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:backgroundTint="#0000"
                        android:contentDescription="点赞"
                        android:scaleType="fitEnd"
                        android:src="@drawable/commend" />

                    <TextView
                        android:id="@+id/like_this_book_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="点赞"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</LinearLayout>