<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/removable_detail">
    <ImageView
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="#f9f9f9"/>
    <LinearLayout
        android:id="@+id/book_information"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/views"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/views"
                android:layout_margin="3dp"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="浏览"
                android:textStyle="bold"
                android:textColor="#C3C3C5"
                android:layout_margin="3dp"
                android:textSize="14sp" />
        </LinearLayout>
        <ImageView
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_width="0.8dp"
            android:layout_height="match_parent"
            android:src="#F5F5F5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/likes"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="点赞"
                android:layout_margin="3dp"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="点赞"
                android:textStyle="bold"
                android:textColor="#C3C3C5"
                android:layout_margin="3dp"
                android:textSize="14sp" />
        </LinearLayout>
        <ImageView
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_width="0.8dp"
            android:layout_height="match_parent"
            android:src="#F5F5F5"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/shares"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="分享"
                android:layout_margin="3dp"
                app:autoSizeMaxTextSize="22sp"
                app:autoSizeMinTextSize="10sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:text="分享"
                android:textStyle="bold"
                android:textColor="#C3C3C5"
                android:layout_margin="3dp"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:src="#F5F5F5"/>

    <LinearLayout
        android:id="@+id/abstract_part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/abstract_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_abstract"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp" />
        <TextView
            android:id="@+id/book_abstract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/songti"
            android:text="@string/book_abstract"
            android:layout_margin="5dp"
            android:textSize="17sp" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:src="#F5F5F5"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/comment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/comment"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/writecomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="写评论"
            android:textSize="15sp" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comments_part"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/no_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/book_comment"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">

        </androidx.recyclerview.widget.RecyclerView>
            <TextView
                android:layout_margin="7dp"
                android:id="@+id/more_comment"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="查看全部评论"
                android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>